--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <div class="container">
         <div class="search-box">
             <i class="bx bxs-map" ></i>
-            <input type="text" placeholder="entrez votre Localisation">
+            <input type="text" placeholder="Entrez votre Localisation">
             <button class="bx bx-search"></button>
         </div>
+
+        <p class="city-hide">City Hide</p>
 
         <div class="weather-box">
             <div class="box">
@@ -27,7 +29,7 @@
                     <div class="weather">
                         <img src="images/cloud.png">
                         <p class="temperature"> 0 <span>°C</span> </p>
-                        <p class="description">Broken Clouds</p>
+                        <p class="description"></p>
                     </div>
                 </div>
             </div>
@@ -52,6 +54,13 @@
                 <p>Vitesse du vent</p>
               </div>
             </div>
+        </div>
+
+        <div class="not-found">
+          <div class="box">
+            <img src="images/404.png">
+            <p>Oops! Localisation non trouvée !</p>
+          </div>
         </div>
     </div>
 
